--- a/Game/CLICK_ME.html
+++ b/Game/CLICK_ME.html
@@ -55,6 +55,6 @@
 
 </body>
 
-<script src="Code/GameInternal.js"></script>
-<link rel="stylesheet" href="Code/GameStyle.css">
+<script src="/Code/GameInternal.js"></script>
+<link rel="stylesheet" href="/Code/GameStyle.css">
 </html>
