--- a/Game/CLICK_ME.html
+++ b/Game/CLICK_ME.html
@@ -55,6 +55,6 @@
 
 </body>
 
-<script src="/Code/GameInternal.js"></script>
-<link rel="stylesheet" href="/Code/GameStyle.css">
+<script src="2022_HWUFJK-main(1)/2022_HWUFJK-main/Game/Code/GameInternal.js"></script>
+<link rel="stylesheet" href="2022_HWUFJK-main(1)/2022_HWUFJK-main/Game/Code/GameStyle.css">
 </html>
