--- a/Game/CLICK_ME.html
+++ b/Game/CLICK_ME.html
@@ -55,6 +55,6 @@
 
 </body>
 
-<script src="/2022_HWUFJK-main/Game/Code/GameInternal.js"></script>
-<link rel="stylesheet" href="/2022_HWUFJK-main/Game/Code/GameStyle.css">
+<script src="/Game/Code/GameInternal.js"></script>
+<link rel="stylesheet" href="/Game/Code/GameStyle.css">
 </html>
