--- a/Game/CLICK_ME.html
+++ b/Game/CLICK_ME.html
@@ -31,25 +31,25 @@
 <div class="Message" Id="Message"></div>
 <div class="Message2" Id="Message2"></div>
 <audio id="PlayCard">
-    <source src="Card.mp3">
+    <source src="Code/Card.mp3">
 </audio>
 <audio id="BackgroundMusic">
-    <source src="Part1.mp3">
+    <source src="Code/Part1.mp3">
 </audio>
 <audio id="Victory">
-    <source src="Victory.m4a">
+    <source src="Code/Victory.m4a">
 </audio>
 <audio id="Fire">
-    <source src="Fire.mp3">
+    <source src="Code/Fire.mp3">
 </audio>
 <audio id="Talk1">
-    <source src="Talk1.m4a">
+    <source src="Code/Talk1.m4a">
 </audio>
 <audio id="Talk2">
-    <source src="Talk2.m4a">
+    <source src="Code/Talk2.m4a">
 </audio>
 <audio id="Talk3">
-    <source src="Talk3.m4a">
+    <source src="Code/Talk3.m4a">
 </audio>
 <button class="settings" onclick="Music()"></button>
 
