--- a/Game/CLICK_ME.html
+++ b/Game/CLICK_ME.html
@@ -6,7 +6,7 @@ v1.2.1 Card Game
     <title>Card Shuffle Beta</title>
 </head>
 <body>
-
+<! -- WOAH WOAH WOAH SUS PERSON, YOU THINK I'M GONNA LET YOU DO THAT??? NEVER GONNA GIVE YOU UP, NEVER GONNA LET YOU DOWN, NEVER GONNA RUN AROUND AND DESERT YOU  -->
 <button class="Card1" onclick="Use1()" Id="Slot1"></button>
 <button class="Card2" onclick="Use2()" Id="Slot2"></button>
 <button class="Card3" onclick="Use3()" Id="Slot3"></button>
