--- a/Game/Retry.html
+++ b/Game/Retry.html
@@ -27,6 +27,7 @@
     }
 </style>
 <SCRIPT>
+    alert("THIS WILL RETURN YOU TO THE ORIGINAL GAME.")
     document.body.style.backgroundImage = "url('Code/BackgroundGameOver.png')";
     var lose = document.getElementById("Lose")
     lose.volume= 0.3
